# qwerio

./: .gitignore  .prettierrc  AGENTS.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
src/: App.vue  main.ts  splitpanes.d.ts  vite-env.d.ts
src-landing/: astro.config.mjs  package.json  pnpm-lock.yaml
src-landing/.astro/: settings.json
src-landing/src/components/: SiteFooter.astro  SiteHeader.astro
src-landing/src/config/: site.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: main.css
src/core/: auth-api.ts  auth-session.ts  auth-types.ts  connection-secrets.ts  connection-sync-api.ts  error-message.test.ts  error-message.ts  nano-id.ts  query-engine-service.ts  query-engine.ts  runtime.ts  schema-export.ts  schema-visibility.test.ts  schema-visibility.ts  secret-vault.ts  sql-autocomplete.test.ts  sql-autocomplete.ts  sql-pagination.ts  subscription-api.ts  theme-registry.ts  types.ts
src/layouts/: AppShell.vue
src/lib/: md5.ts  query-client.ts
src/router/: index.ts
src/stores/: app-settings.ts  app-tabs.ts  auth.ts  connection-sync.ts  connections.ts  saved-queries.ts  subscription.ts  ui.ts  vault.ts  workbench.ts
src/styles/: main.css
src/views/: AppStatusView.vue  CollectionView.vue  ConnectionsView.vue  EmptyView.vue  QueryView.vue  SettingsPageView.vue  SettingsView.vue  SubscriptionView.vue  TableView.vue  TeamCreateView.vue  WorkbenchView.vue
tests/web/: setup.ts
(+50 files in other folders)
