[package]
name = "qwerio"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "qwerio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "net"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-1"] }
chrono = "0.4"
uuid = "1"
tokio-rustls = "0.26.4"
rustls = "0.23.37"
webpki-roots = "1.0.6"
mysql_async = "0.36"
tiberius = { version = "0.12", default-features = false, features = ["rustls", "tds73", "tokio"] }
tokio-util = { version = "0.7", features = ["compat"] }
rusqlite = { version = "0.32", features = ["bundled"] }
redis = { version = "0.27", features = ["tokio-comp"] }
mongodb = { version = "3.5.1", default-features = false, features = ["rustls-tls", "bson-3", "compat-3-3-0"] }
futures-util = "0.3"
